Attempt to fix background on mobile view

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,6 +1,7 @@
 html {
   height: auto;
   min-height: 100%;
+  max-height: 100%;
   width: 100%;
 }
 
@@ -9,6 +10,7 @@ body
   background: url('../images/BW Mountain.png') no-repeat center center fixed;
   height: auto%;
   min-height: 100%;
+  max-height: 100%;
   width: 100%;
   background-size: cover;
   z-index: -3;
